[package]
name = "cc-tweaked-turtle-program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
env_logger = "0.9.0"
futures = "0.3.21"
futures-util = "0.3.21"
hyper = { version = "0.14.20", features = ["full"] }
hyper-tungstenite = "0.8.1"
lazy_static = "1.4.0"
log = "0.4.17"
tokio = { version = "1.19.2", features = ["full"] }
tungstenite = "0.17.2"
