[package]
name = "cc-tweaked-turtle-program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.58"
async-tungstenite = "0.17.2"
env_logger = "0.9.0"
futures = "0.3.21"
futures-util = "0.3.21"
hyper = { version = "0.14.20", features = ["full"] }
hyper-tungstenite = "0.8.1"
lazy_static = "1.4.0"
log = "0.4.17"
tokio = { version = "1.19.2", features = ["full"] }
tokio-stream = { version = "0.1.9", features = ["io-util"] }
tokio-tungstenite = { version = "0.17.1", features = ["stream"] }
tungstenite = "0.17.2"

[patch.crates-io]
tokio-tungstenite = { git = 'https://github.com/snapview/tokio-tungstenite/' }
